fix(custom): 增加editor-block的伪类的z-index

--- a/src/packages/editor.scss
+++ b/src/packages/editor.scss
@@ -103,6 +103,7 @@
       left: 0;
       right: 0;
       bottom: 0;
+      z-index: 9999;
       // background-color: #ccc;
     }
 
